clusters/live/devbench/networkpolicy/allow-appwrite-mariadb-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-appwrite-mariadb-egress
  namespace: live-devbench
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: appwrite
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 172.16.0.106/32
      ports:
        - protocol: TCP
          port: 3306
