clusters/live/devbench/networkpolicy/allow-live-namespace-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-live-namespace-traffic
  namespace: live-devbench
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              milano.tier: live
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              milano.tier: live
